--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,5 @@ cmake_minimum_required(VERSION 3.26)
 project(baekjoon_level_solve)
 
 set(CMAKE_CXX_STANDARD 14)
-
-add_executable(baekjoon_level_solve
-        9/task1.cpp
-        9/task2.cpp
-        9/task3.cpp
-        9/task4.cpp
-        9/task5.cpp
-        9/task6.cpp
-        "1~8 pass/8-6.cpp")
+add_executable(9_task1 9/task1.cpp)
+add_executable(9_task2 9/task2.cpp)
